<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">via</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="webUrlCancel">Cancel</string>
    <string name="tools">Tools</string>
    <string name="refresh">Refresh</string>
    <string name="divider">Divide</string>
    <string name="search">Search</string>
    <string name="hisotry">History</string>
    <string name="deletefavorites">Delete Bookmark</string>
    <string name="deletehistory">Delete History</string>
    <string name="deleteAllHistory">Clear History</string>
    <string name="name">Name:</string>
    <string name="url">URL:</string>
    <string name="blank"> </string>
    <string name="phone">Phone:</string>
    <string name="email">Enail:</string>
    <string name="map">Map</string>
    <string name="picture">Picture</string>
    <string name="saveImage">Save picture</string>
    <string name="link">URL</string>
    <string name="sure">OK</string>
    <string name="cancel">Cancel</string>
    <string name="filemanagerNewDirectory">New</string>
    <string name="fileName">Name:</string>
    <string name="savePath">Path:</string>
    <string name="defaultPath">/mnt/sdcard/webbrowserX/download/</string>
    <string name="deleteFolder">Delete</string>
    <string name="newNameForFolder">Rename</string>
    <string name="webPageTitle">Title:</string>
    <string name="currentPageUrl">Current URL</string>
    <string name="copy">Copy</string>
    <string name="returnStr">Back</string>
    <string name="pageAttr">Page attributes</string>
    <string name="pageSize">Page size:</string>
    <string name="choosedPictureURL">Picture URL</string>
    <string name="webUrlHint">URL</string>
    <string name="webUrlGoto">Go</string>
    <string name="favorite">Bookmark</string>
    <string name="modifyfavorites">Edit bookmark</string>
    <string name="viewImage">Show picture</string>
    <string name="viewImageAttributes">Show arrtibutes</string>
    <string name="filemanagerTitle">Choose path</string>
    <string name="filemanagerItemIcon">Icon</string>
    <string name="createNewFolder">New</string>
    <string name="currentPageEncoding">Page encode:</string>
    <string name="choosedLinkedURL">URL:</string>
    <string name="homepage">Homepage</string>
    <string name="open_link">Open link</string>
    <string name="copy_link">Copy link</string>
    <string name="Private_Mode">Private Mode</string>
    <string name="save_page">Save Page</string>
    <string name="bookmark">Bookmark</string>
    <string name="history">History</string>
    <string name="capture_page">Capture page</string>
    <string name="capture_screen">Capture screen</string>
    <string name="edit_page">Edit page</string>

</resources>
