<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/tools_window_vertical"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#EFEFF1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/private_browsing"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/Private_Mode"
            android:background="#EFEFF1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C4C4C4"/>

        <Button
            android:id="@+id/add_favorite_button"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/save_page"
            android:background="#EFEFF1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C4C4C4"/>

        <Button
            android:id="@+id/show_favorite_button"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/bookmark"
            android:background="#EFEFF1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C4C4C4"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/history"
            android:background="#EFEFF1"
            android:id="@+id/show_history_button"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C4C4C4"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/capture_page"
            android:background="#EFEFF1"
            android:id="@+id/page_screenshot"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C4C4C4"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/capture_screen"
            android:background="#EFEFF1"
            android:id="@+id/window_screenshot"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C4C4C4"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/edit_page"
            android:background="#EFEFF1"
            android:id="@+id/page_edit"/>

    </LinearLayout>

</RelativeLayout>
