<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:layout_gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/item_longclicked_viewImage"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/viewImage"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/item_longclicked_saveImage"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/saveImage"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/item_longclicked_viewImageAttributes"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/viewImageAttributes"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        />

</LinearLayout>