<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFF1"
    >

    <FrameLayout
        android:id="@+id/fileManager_title"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:background="#EFEFF1"
        >
        <TextView
            android:id="@+id/fileManager_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filemanagerTitle"
            android:textSize="18sp"
            android:textColor="#999999"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            />
        <Button
            android:id="@+id/fileManager_title_newDirectory"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:text="新建目录"
            android:layout_gravity="right|center_vertical"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            />
    </FrameLayout>

    <ListView
        android:id="@+id/fileManager_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/fileManager_title"
        android:layout_above="@+id/fileManager_toolbar"
        >

    </ListView>

    <RelativeLayout
        android:id="@+id/fileManager_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#EEEEEE"
        >
        <TextView
            android:id="@+id/fileManager_toolbar_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:textSize="20sp"
            android:textColor="#999999"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="15dp"
            android:gravity="bottom"
            />
        <TextView
            android:id="@+id/fileManager_toolbar_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textColor="#999999"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:gravity="bottom"
            />
    </RelativeLayout>

</RelativeLayout>
